midify message final

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        console.log("last version: 2026-01-30 00:00");
+        console.log("last version: 2026-01-30 08:00");
         // ==========================================
         // --- LÓGICA DE LA LLUVIA DE FRASES ---
         // ==========================================
@@ -169,9 +169,9 @@
         const finalMessages = [
             "¡Fin de una era! <br> ✨ UDR ✨",
             "¡Eres libre, Raspu! <br> 🚀 Nada como el placer de acabar...",
-            "Misión Completada <br> ¡Exitos en lo que viene!🎯",
-            "¡A disfrutar la vida! <br> 😎",
-            "Game Over! <br> ✨ UDR ✨"
+            "Condena Cumplida <br> ¡Exitos en lo que viene!🎯",
+            "¡A disfrutar la vida! <br> 😎 La que viene",
+            "Game Over! <br> ✨ NADA ✨"
         ];
 
         /* --- EJEMPLO DE CÓMO SERÍA CON API EN EL FUTURO ---
