--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        console.log("last version: 2026-01-30 08:00");
+        console.log("last version: 2026-01-30 13:00");
         // ==========================================
         // --- LÓGICA DE LA LLUVIA DE FRASES ---
         // ==========================================
@@ -156,13 +156,21 @@
             "Tanto va el cantaro a la fuente... que al final se llena",
             "El ser humano es hijo del rigor",
             "Donde come capitán, no come marinero",
-            "El buey solo bien se lame",
+            "El buey solo, bien se lame",
             "Uno no coincide por casualidad",
             "No te cae un angel... si andas por el infierno",
             "Hay gente que hace ruido al entrar a un lugar, por que no tiene luz interior",
             "Sí tenes que estar cuidando a tu mujer, es por que tu mujer no te pertenece",
             "Cuando el río suena, es por que agua trae",
-            "Todos los nudos caen al peine"
+            "Todos los nudos caen al peine",
+            "Varengoooo!!",
+            "No andan los mails!!",
+            "Ya vas a ver, Ya te va a pasar",
+            "Las cosas simple de la vida",
+            "Ustedes que se hacen los importantes",
+            "Santiagooo!!",
+            "Que es esto",
+            "No, No puede ser"
         ];
 
         // Frases finales (para rotar cuando termine)
